--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                         </div>
                         <div class="per-player">
                             <h3>Per Player</h3>
-                            <input id="per-player" type="text" value=""
+                            <input id="per-player" type="number" value=""
                                 placeholder="Budget">
                         </div>
                         <button id="calculate" class="btn btn1">Calculate</button>
@@ -168,12 +168,12 @@
                         </div>
                         <div class="per-player">
                             <h3>Manager</h3>
-                            <input id="manager" type="text" value=""
+                            <input id="manager" type="number" value=""
                                 placeholder="Amount">
                         </div>
                         <div class="per-player">
                             <h3>Coach</h3>
-                            <input id="coach" type="text" value=""
+                            <input id="coach" type="number" value=""
                                 placeholder="Amount">
                         </div>
                         <button id="calculate-total" class="btn btn3">Calculate
