new number added

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 <div class="right-section">
                     <div class="sec-top">
                         <div class="selected-v">
-                            <h1>Selected-V</h1>
+                            <h1>Selected-<span id="select-count">0</span></h1>
                         </div>
                         <div class="select">
                             <!-- <h2>
